# depenses-eclairees

./: .gitignore  Aptfile  Procfile  README.md  ci.env  cron.json  example.env  gunicorn_conf.py  manage.py  pyproject.toml  test.env
.github/workflows/: django.yml
app/: __init__.py  config_data.py  utils.py
app/ai_models/: config_albert.py
app/data/: db.py
app/data/sql/: __init__.py  sql.py
app/file_manager/: __init__.py  classifier.py  cleaner.py  statistics.py  utils_file_manager.py
app/grist/: __init__.py  config_grist.py  grist_api.py
app/models/: __init__.py  marche.py  tiers.py
app/processor/: __init__.py  analyze_content.py  attributes_query.py  extraction_text_from_attachments.py  post_processing_llm.py  post_traitement_llm.py  select_relevant_content.py  synthesis.py
app/processor/attributes/: __init__.py  acte_engagement.py  att_sirene.py  avenant.py  bon_de_commande.py  ccap.py  cctp.py  devis.py  fiche_navette.py  kbis.py  rib.py  sous_traitance.py
app/tests/: llm_tests.py
docia/: __init__.py  admin.py  apps.py  asgi.py  celeryapp.py  celeryworker.py  context_processors.py  forms.py  logging.py  models.py  permissions.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
docia/auth/: backends.py  forms.py  views.py
docia/common/: models.py
docia/documents/: models.py
docia/file_processing/: analyze.py  classification.py  content_analysis.py  files_utils.py  info_extraction.py  init_documents.py  llm.py  models.py  pipeline.py  text_extraction.py  utils.py
docia/file_processing/llm/: client.py  ocr.py
docia/file_processing/pipeline/: pipeline.py  tasks.py  utils.py
docia/file_processing/processor/: analyze_content.py  attributes_query.py  classifier.py  extraction_text_from_attachments.py  pdf_drawings.py  post_processing_llm.py
docia/file_processing/rategate/: gate.py  models.py
docia/migrations/: 0001_initial.py  0002_dataengagement_dataattachments_databatch.py  0003_ratelimitcount.py  0004_dataprogrammesministeriels_and_more.py  0005_alter_user_email.py  0006_trackingevent.py  0007_alter_dataengagementitems_num_ej.py  0008_dataattachments_file.py  0009_rename_num_ej_dataengagement_ej_and_more.py  0010_dataattachments_created_at_and_more.py  0011_rename_dataattachments_dataattachment.py  0012_alter_trackingevent_id_alter_user_id.py  0013_batch_jobs_steps.py  0013_batchtextextraction_filetextextraction.py  0013_jobs.py  0014_analyzedocumentbatch_fileinfo_and_more.py  0014_processdocumentbatch_target_classifications_and_more.py  0015_processdocumentbatch_retry_of.py  0015_rename_analyzedocumentbatch_processdocumentbatch_and_more.py  0016_processdocumentbatch_steps_processdocumentstep_order.py  0017_rategatestate.py  0018_rename_dataattachment_document_and_more.py  0019_add_document_structured_data_and_rename_infoextraction_to_contentanaltsis.py  0020_remove_document_json_error.py  0021_engagementscope.py  0022_document_engagements.py  0023_auto_20260209_1747.py  0024_remove_document_ej.py  0025_remove_fileinfo_num_ej_alter_document_dossier_and_more.py  0026_externaldocumentmetadata_fileinfo_external_id_and_more.py  0027_alter_engagementscope_options_and_more.py  0028_document_analyzed_at_externaldocumentmetadata_date_and_more.py
docia/permissions/: checks.py  models.py
docia/ratelimit/: models.py  services.py
docia/sync/: s3.py  sync_engagement_items.py
docia/templatetags/: docia.py
docia/tests/: test_urls.py
docia/tracking/: models.py  serializers.py  urls.py  views.py
docker/: Dockerfile-githubactions  Dockerfile-scalingo
scripts/: from_scalingo_to_local_sql.py  maj_grist_from_scalingo.py
static/css/: main.css
static/js/: clipboard.js
tests/: conftest.py  utils.py
tests/app/: test_db.py
tests/factories/: data.py  file_processing.py  users.py
tests_e2e/: test_batch.py  test_quality_acte_engagement.py  test_quality_bpu.py  test_quality_ccap.py  test_quality_classification.py  test_quality_dc4.py  test_quality_devis.py  test_quality_fiche_navette.py  test_quality_pipeline_ae.py  test_quality_rib.py  test_structure_marche.py  test_widget_pymupdf.py  utils.py
tests_e2e/text-extraction/: test_ocr_api.py  test_quality_ocr.py
tests_e2e/text_extraction/: test_ocr_api.py
webapp/: main.py
webapp/webapp/: config.py  db.py  oauth.py  permissions.py  permissions.txt  rate_limits.py
(+187 files in other folders)
